@@ -22,7 +22,9 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
  - 
  - 
  - Perl (Lian Wan Situ)
-  * Fixed a bug with Xchat::print that prevents printing out a single 0
+  * Fixed a bug with Xchat::print that prevents printing out a
+    single 0(Lian Wan Situ)
+  * Fixed a bug in Xchat::get_prefs that was clobbering the stack(Sergio Luis)
 
 
 ----------------------------------------------------------------------
